refactor : 파일 업로드, 폴더 삭제 시 루트 폴더 사용 용량 변화